--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,47 @@
-/* General styles */
 body {
   background-image: url('./assets/background.jpg');
-  background-size: cover; /* Ensures the image covers the entire background */
-  background-repeat: no-repeat; /* Prevents the image from repeating */
-  background-position: center center; /* Centers the image */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
   height: 100%;
   margin: 0;
 }
 
-
-/* Container for the logo */
-.logo {
-  text-align: center;
-  padding: 20px;
-  background-color: #282c34;
-  color: white;
-  font-size: 24px;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  box-sizing: border-box;
 }
 
-/* Navigation styles */
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  background-image: url('./assets/logo.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 200px; /* Adjust the width as needed */
+  height: 200px; /* Adjust the height as needed */
+}
+
 nav {
   display: flex;
-  justify-content: center;
-  background-color: #61dafb;
-  padding: 10px 0;
-}
-
-nav a {
-  text-decoration: none;
-  margin: 0 15px;
-}
-
-nav h1 {
-  font-size: 1.5em;
-  color: #282c34;
-  margin: 0;
+  align-items: center;
 }
 
 nav button {
-  background-color: #282c34;
+  background-color: #1249b7;
   color: white;
   border: none;
-  padding: 10px 20px;
-  margin: 0 5px;
+  padding: 15px 30px; /* Increased padding for larger buttons */
+  margin: 0 10px; /* Adjusted margin for spacing */
   cursor: pointer;
-  font-size: 1em;
+  font-size: 18px; /* Increased font size */
   border-radius: 5px;
 }
 
@@ -52,12 +49,9 @@ nav button:hover {
   background-color: #3b3f46;
 }
 
-/* Main content area */
 main {
-  padding: 20px;
-  max-width: 800px;
+  max-width: 1000px;
+  width: 100%;
   margin: 0 auto;
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: transparent;
 }
