--- a/src/components/currencyCon/currencyCon.css
+++ b/src/components/currencyCon/currencyCon.css
@@ -1,4 +1,4 @@
-.form-container {
+.currency-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,8 +19,11 @@
     width: 100%;
   }
   
+  form > div {
+    margin-bottom: 15px;
+  }
+  
   label {
-    margin-top: 10px;
     margin-bottom: 5px;
     font-weight: bold;
   }
@@ -28,14 +31,14 @@
   input {
     width: 100%;
     padding: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
   }
   
   button {
-    padding: 30px;
+    padding: 10px;
     background-color: #61dafb;
     border: none;
     border-radius: 4px;
@@ -47,8 +50,8 @@
     background-color: #21a1f1;
   }
   
-  .error {
-    color: red;
-    margin-top: 10px;
+  .result {
+    font-size: larger;
+    font-weight: bold;
+    padding: 20px;
   }
-  
