--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,12 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  height: 100%;
+  background-attachment: fixed;
+  min-height: 100vh;
   margin: 0;
+  padding: 0;
 }
+
 
 header {
   display: flex;
