--- a/src/components/currencyCon/currencyCon.css
+++ b/src/components/currencyCon/currencyCon.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     width: 100%;
     max-width: 400px; /* Adjust the max-width as needed */
-    margin: 0 auto;
+    margin: 50px auto;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -38,7 +38,7 @@
   }
   
   button {
-    padding: 10px;
+    padding: 20px;
     background-color: #61dafb;
     border: none;
     border-radius: 4px;
