--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,11 +2,17 @@
   font-size: xx-large;
   font-weight: bold;
   font-family: "Playwrite NL", cursive;
-  background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+  background-image: linear-gradient(
+    to right,
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    indigo,
+    violet
+  );
   color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
 }
-
-
-  
