--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html,
-body,
-#root {
-  height: 100%;
-  margin: 0;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Arial", sans-serif;
-  background-color: #f4f4f9;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-ul {
-  list-style-type: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
